--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,10 +1,10 @@
-name:publish
+name:Publish 🚀
 
 on:
   workflow_dispatch:
   push:
-        branches:
-        - main
+    branches:
+    - main
 
 jobs:
   publish:
