--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -8,13 +8,13 @@ on:
 
 jobs:
   publish:
-      runs-on: ubantu-latest
+      runs-on: ubuntu-latest
       
       steps:
-        - uses: action/checkout@v3
+        - uses: actions/checkout@v3
         
-        - name: Setup.NET
-        - uses: action/setup-dotnet@v3
+        - name: Setup .NET
+        - uses: actions/setup-dotnet@v3
           with:
             dotnet-version: '6.0.x'
             
@@ -22,7 +22,7 @@ jobs:
         - run: dotnet restore ./CurrentTimeService.sln
         
         - name: Build
-        - run: dotnet build./CurrentTimeService.sln --configuration Release --no-restore
+        - run: dotnet build ./CurrentTimeService.sln --configuration Release --no-restore
         
         - name: Publish
         - run: dotnet publish ./CurrentTimeService.sln --configration Release --no-build
