Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -7,28 +7,24 @@ trigger:
 - main
 
 pool:
-  vmImage: 'windows-latest'
+  vmImage: 'ubuntu-latest'
 
-variables:
-  solution: '**/*.sln'
-  buildPlatform: 'Any CPU'
-  buildConfiguration: 'Release'
 
 steps:
-- task: NuGetToolInstaller@1
-
-- task: NuGetCommand@2
+- task: S3Upload@1
   inputs:
-    restoreSolution: '$(solution)'
-
-- task: VSBuild@1
+    awsCredentials: 'AWS-S3 Connection'
+    regionName: 'us-east-1'
+    bucketName: 'CurrentTimeServiceBucket'
+    sourceFolder: 'CurrentTimeService'
+    globExpressions: '**'
+    createBucket: true   
+-
+- task: CloudFormationCreateOrUpdateStack@1
   inputs:
-    solution: '$(solution)'
-    msbuildArgs: '/p:DeployOnBuild=true /p:WebPublishMethod=Package /p:PackageAsSingleFile=true /p:SkipInvalidConfigurations=true /p:DesktopBuildPackageLocation="$(build.artifactStagingDirectory)\WebApp.zip" /p:DeployIisAppPath="Default Web Site"'
-    platform: '$(buildPlatform)'
-    configuration: '$(buildConfiguration)'
-
-- task: VSTest@2
-  inputs:
-    platform: '$(buildPlatform)'
-    configuration: '$(buildConfiguration)'
+    awsCredentials: 'AWS-S3 Connection'
+    regionName: 'us-east-1'
+    stackName: 'CurrentTimeServiceDemo'
+    templateSource: 's3'
+    s3BucketName: 'DevOpsDemo'
+      
